--- a/public/index.html
+++ b/public/index.html
@@ -126,7 +126,7 @@
               <h3>języka angielskiego</h3>
             </div>
             <div class="col-md-6 napis1">
-              <img src="/images/Flag_of_France_(1794–1815,_1830–1974,_2020–present.png" alt="">
+              <img src="/images/Flag_of_France.png" alt="">
               <h2>Amerykańska odmiana</h2>
               <h3>języka angielskiego</h3>
             </div>
