--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
 
 <!--    SEKCJA 2 - BLOG 1    -->
 
-    <section class="container">
+    <section class="container" id="blog_section_1">
       <div class="row">
         <div class="left_side_blog col-lg-6 col-md-6">
           <h2>Językowa Szkoła Letnia<br><span class="second_h2">dla studentów I oraz II<br>stopnia</span></h2>
@@ -95,7 +95,7 @@
 
 <!--    SEKCJA 4 - BLOG 2     -->
 
-    <section class="container">
+    <section class="container" id="blog_section_2">
       <div class="row">
         <div class="right_side_blog col-lg-6 col-md-6">
           <img src="/images/english-book-illustration-design_23-2149507600.png" alt="">
@@ -137,7 +137,7 @@
 
 <!--    SEKCJA 6 - PAKIETY    -->
 
-    <section class="container">
+    <section class="container" id="packets_section">
       <div class="row">
         <div class="centering col-md-12">
           <h2><span class="second_h2">Aktualne ceny naszych</span><br>pakietów językowych</h2>
@@ -196,11 +196,33 @@
       </div>
     </section>
 
-    <section>
-      <div id="app" class="like_button_container"></div>
+<!--    SEKCJA 7 - FORMULARZ REZERWACJA    -->
+
+    <section id="reservation_form_section">
+      <div class="container">
+        <div class="row">
+          <div class="centering col-md-12">
+            <h2><span class="second_h2">Czy jesteś zdecydowany?</span><br>Zarezerwuj miejsce już teraz!</h2>
+            <p>Złóż swoją rezerwację, aby być pewnym miejsca w<br>kursie językowym, organizowanym przez<br>Szkołę Letnią.</p>
+          </div>
+        </div>
+        <div id="reservation_form"></div>
+      </div>
     </section>
 
-<!--    SEKCJA 7 - BANER LOKALIZACJA    -->
+<!--    SEKCJA 8 - FORMULARZ KONTAKT    -->
+
+    <section class="container" id="contact_form_section">
+      <div class="row">
+        <div class="centering col-md-12">
+          <h2><span class="second_h2">Jeżeli masz pytania -</span><br>nie wahaj się do nas napisać!</h2>
+          <p>Gwarantujemy odpowiedź w ciągu<br>następnych 24 godzin.</p>
+        </div>
+      </div>
+      <div id="contact_form"></div>
+    </section>
+
+<!--    SEKCJA 9 - BANER LOKALIZACJA    -->
 
     <section id="localization">
       <div class="container">
@@ -234,13 +256,13 @@
       </div>
     </section>
 
-<!--    SEKCJA 8 - MAPKA    -->
+<!--    SEKCJA 10 - MAPKA    -->
 
     <section class="container" id="google_map">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d156388.803116818!2d21.061194099999998!3d52.23293795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471ecc669a869f01%3A0x72f0be2a88ead3fc!2sWarszawa!5e0!3m2!1spl!2spl!4v1684783260019!5m2!1spl!2spl" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
-<!--    SEKCJA 9 - STOPKA    -->
+<!--    SEKCJA 11 - STOPKA    -->
 
     <footer>
       <section class="container">
