--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
-  <body>
+  <body id="body">
 
 <!--    NAWIGACJA    -->
 
@@ -24,17 +24,21 @@
         <div class="col-md-12 col-lg-5">
           <h1>Językowa Szkoła Letnia</h1>
         </div>
-        <nav class="col-md-12 col-lg-7 navbar navbar-expand-lg">
+        <nav class="col-md-12 col-lg-7 navbar navbar-expand-lg sticky-top">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_nav" aria-controls="navbar_nav" aria-expanded="false">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbar_nav">
             <ol class="navbar-nav">
-              <li class="nav-item"><a href="#header" class="nav-link">Strona główna</a></li>
-              <li class="nav-item"><a href="#o_nas" class="nav-link">O nas</a></li>
-              <li class="nav-item"><a href="#program" class="nav-link">Program</a></li>
-              <li class="nav-item"><a href="#zapisy" class="nav-link">Zapisy</a></li>
-              <li class="nav-item"><a href="#kontakt" class="nav-link">Kontakt</a></li>
+              <li class="nav-item font-sizes">
+                <i class="fa fa-font" id="plus-font"></i>
+                <i class="fa fa-font" id="minus-font"></i>
+              </li>
+              <li class="nav-item"><a href="#start" class="nav-link">Strona główna</a></li>
+              <li class="nav-item"><a href="#offer_section_main" class="nav-link">Oferta</a></li>
+              <li class="nav-item"><a href="#packets_section" class="nav-link">Pakiety</a></li>
+              <li class="nav-item"><a href="#reservation_form_section" class="nav-link">Zapisy</a></li>
+              <li class="nav-item"><a href="#contact_form_section" class="nav-link">Kontakt</a></li>
               <li class="nav-item"><a href="tel:123123123" class="nav-link">Zadzwoń</a></li>
             </ol>
           </div>
@@ -231,7 +235,7 @@
             <h2>Sprawdź<br><span class="under_h2">naszą lokalizację</span></h2>
           </div>
           <div class="col-lg-3 col-md-6">
-            <i class="fa fa-map-marker" style="font-size:48px;"></i>
+            <i class="fa fa-map-marker"></i>
             <h4>
               Adres 1
             </h4>
@@ -242,7 +246,7 @@
             </p>
           </div>
           <div class="col-lg-3 col-md-6">
-            <i class="fa fa-map-marker" style="font-size:48px;"></i>
+            <i class="fa fa-map-marker"></i>
             <h4>
               Adres 2
             </h4>
@@ -259,7 +263,7 @@
 <!--    SEKCJA 10 - MAPKA    -->
 
     <section class="container" id="google_map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d156388.803116818!2d21.061194099999998!3d52.23293795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471ecc669a869f01%3A0x72f0be2a88ead3fc!2sWarszawa!5e0!3m2!1spl!2spl!4v1684783260019!5m2!1spl!2spl" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d156388.803116818!2d21.061194099999998!3d52.23293795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471ecc669a869f01%3A0x72f0be2a88ead3fc!2sWarszawa!5e0!3m2!1spl!2spl!4v1684783260019!5m2!1spl!2spl" width="100%" height="500" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
 <!--    SEKCJA 11 - STOPKA    -->
@@ -300,5 +304,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="scripts.js"></script>
   </body>
 </html>
